# 10-k-generator

./: .replit  Procfile  README.md  main.py  main_openai.py  pyproject.toml  replit.nix  requirements.txt  test_direct_taxgpt.py  test_formatting.py  utils.py
attached_assets/: Pasted-Goal-Enhance-the-Google-Docs-integration-so-that-the-final-uploaded-report-is-clean-professional--1749744618130_1749744618131.txt  Pasted-Goal-Enhance-the-Google-Docs-integration-so-that-the-final-uploaded-report-is-clean-professional--1749744632463_1749744632463.txt  Pasted-We-already-have-a-Flask-app-that-Exposes-analyze-start-and-analyze-status-job-id-to-run-a-long-1749683695772_1749683695773.txt
